# verticalMPL

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Models/: LRModel.cpp  LRModel.h  NNModel.cpp  NNModel.h
SCParty/: Functionalities.cpp  Functionalities.h  PreCompute.cpp  PreCompute.h
data/mnist/: README.md  split.py
utils/: Constant.cpp  Constant.h  IOManager.cpp  IOManager.h  Mat.cpp  Mat.h  SocketManager.cpp  SocketManager.h  SocketOnline.cpp  SocketOnline.h
